src/objects/MICO_Related_Bug__c.object
<CustomObject>
    <description>Business Description: This object allows you to link a defect to another one, e.g. where they are duplicated or closely related.

Used In: Mission Control App</description>
    <fields>
        <fullName>Bug__c</fullName>
        <label>Defect</label>
        <referenceTo>MICO_Bug__c</referenceTo>
        <relationshipLabel>Related Defects</relationshipLabel>
        <relationshipName>MICO_Related_Defects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Bug_Status__c</fullName>
        <formula>text(Related_Bug__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Bug Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Bug_Summary__c</fullName>
        <formula>Related_Bug__r.Problem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The summary of the related bug</inlineHelpText>
        <label>Related Bug Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Bug__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Defect</label>
        <referenceTo>MICO_Bug__c</referenceTo>
        <relationshipLabel>Related Defects (Defect)</relationshipLabel>
        <relationshipName>MICO_Related_Defects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related Defect</label>
    <nameField>
        <displayFormat>BugRel-{00000}</displayFormat>
        <label>Related Bug Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Defects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>